[package]
name = "hacktor"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
tokio-sync = { git = "https://github.com/tokio-rs/tokio" }
futures-preview = "0.3.0-alpha.17"
tracing = "0.1.3"
pin-utils = "0.1.0-alpha.4"
